--- a/research/index.html
+++ b/research/index.html
@@ -114,7 +114,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
 
   <hr>
-    
+   <div class="w3-row w3-padding-64" id="about">
+    <div class="w3-col m6 w3-padding-large w3-hide-small">
+     <img src="https://lozelise.github.io/Portfolio/Papers.jpg" class="w3-round w3-image w3-opacity-min" alt="Papers spread out" width="600" height="750">
+    </div>
+
+    <div class="w3-col m6 w3-padding-large">
+      <h2 class="w3-center">Teaching</h2><br>
+      <p>Involved in the creation of a new set of units for the Masters of IT at Queensland University of Technology, I have contributed my knowledge of UX, psychology and cognitive science to the content and teaching of these new and topically relevant units.</p>
+      <p><a href="https://qutvirtual4.qut.edu.au/group/student/enrolment/units/unit?unitCode=IFN621&year=2020">IFN621</a>surveys basic principles of cognitive and social psychology relevant to understanding the individual as information processor. In addition, it provides relevant perspectives and theories of how humans interact with information and details how these perspectives relate to fundamental aspects such as information organization, information requirements and information governance. Finally, it provides an overview of relevant technological tools</p> 
+      <p><a href="https://qutvirtual4.qut.edu.au/group/student/enrolment/units/unit?unitCode=IFN623&year=2020">IFN623</a>aims to provide an understanding of the cognitive architecture of human beings and how that influences human behaviour in information interactions. In addition, it aims to develop knowledge of the fundamentals of contemporary information management both from a conceptual and technological perspective. Unit content will be focused on developing understanding of three themes: human information processing, human information interaction, and information processing technologies.</p>
+      <p class="w3-large w3-text-grey w3-hide-medium"><a href="https://lozelise.github.io/Portfolio/teaching">More</a></p>
+    </div>
+  </div>
+  
+  <hr>
   
   <!-- Contact Section -->
   <div class="w3-container w3-padding-large w3-grey">
