--- a/research/index.html
+++ b/research/index.html
@@ -116,7 +116,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <hr>
    <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="https://lozelise.github.io/Portfolio/Papers.jpg" class="w3-round w3-image w3-opacity-min" alt="Papers spread out" width="600" height="750">
+     <img src="https://lozelise.github.io/Portfolio/classroom.png" class="w3-round w3-image w3-opacity-min" alt="Papers spread out" width="600" height="750">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
