--- a/research/index.html
+++ b/research/index.html
@@ -106,9 +106,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <p class="w3-text-grey">Using neural networks, we aim to test the emotion generalisation hypothesis in autonomous face categorisation</p><br>
     
     <div class="w3-col l6 w3-padding-large">
-      <img src="https://lozelise.github.io/Portfolio/Poster.png" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
+      <img src="https://lozelise.github.io/Portfolio/Poster.png" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%"><br>
             <h4>Trust in Autonomous Systems</h4>
-      <p class="w3-text-grey">An ongoing project as part of an InnoCentive award</p>    
+      <p class="w3-text-grey">An ongoing project as part of an InnoCentive award</p><br> 
     </div>
     </div>
   </div>
