--- a/research/index.html
+++ b/research/index.html
@@ -66,8 +66,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-display-bottomleft w3-padding-large w3-opacity">
   </div>
 </header>
-
-    <div class="w3-display-bottomleft w3-padding-large w3-opacity">
+    <div class="w3-main" style="margin-left:300px"> 
        <h1 class="w3-xxlarge">Research</h1>
   </div>
 
