--- a/research/index.html
+++ b/research/index.html
@@ -104,10 +104,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <h4>Emotion Generalisation of Faces</h4>
       <p class="w3-text-grey">Using neural networks, we aim to test the emotion generalisation hypothesis in autonomous face categorisation</p><br>
     
-    <div class="w3-col l6 w3-padding-large">
-      <img src="https://lozelise.github.io/Portfolio/Poster.png" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%"><br>
-            <h4>Trust in Autonomous Systems</h4>
+      <h4>Trust in Autonomous Systems</h4>
       <p class="w3-text-grey">An ongoing project as part of an InnoCentive award</p><br> 
+      
+    <div class="w3-col l6 w3-padding-large">
+      <img src="https://lozelise.github.io/Portfolio/laptop.jpg" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
+      <img src="https://lozelise.github.io/Portfolio/Poster.png" class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
     </div>
     </div>
   </div>
