--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <img src="MeAndy.jpg" alt="personrobot" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>ANDY THE ANATOMY BOT</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Andy is a bio-inspired robotic face with artificial pneumatic muscles mimicing the structure and function of human facial anatomy. I created Andy after looking into artificial soft muscles for a freelance project I was working on and thought it would be interesting to utilise these to the construction of a face by matching the muscles anatomically. Whilst he was born out of an idle curiosity, I now hope to apply him in the area of facial expression training, particularly for people on the Autism Spectrum.</p>
       </div>
     </div>
     </a>
@@ -148,7 +148,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <img src="EcuadorAndes.jpg" alt="AndesMountainsPeople" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>VOLUNTEERING</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p>Volunteering has been a key component of my personal growth and the perspective I take of the world. I have worked with wildlife in South Africa, a small community in the Ecuadorian Andes, reforestation projects in the Galapagos, Palaeontology digs in Patagonia, as well as missionary work in South Africa</p>
       </div>
     </div>
     </a>
