--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <img src="EcuadorAndes.jpg" alt="AndesMountainsPeople" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>VOLUNTEERING</b></p>
-        <p>Volunteering has been a key component of my personal growth and the perspective I take of the world. I have worked with wildlife in South Africa, a small community in the Ecuadorian Andes, reforestation projects in the Galapagos, Palaeontology digs in Patagonia, as well as missionary work in South Africa</p>
+        <p>Volunteering has been a key component of my personal growth and the perspective I take of the world. I have worked with: <ul><li>wildlife in South Africa</li> <li>a small community in the Ecuadorian Andes</li> <li>reforestation projects in the Galapagos</li> <li>Palaeontology digs in Patagonia</li> <li>and missionary work in South Africa</li> </ul></p>
       </div>
     </div>
     </a>
