--- a/research/index.html
+++ b/research/index.html
@@ -60,16 +60,15 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <!-- Page content -->
 <div class="w3-main" style="margin-left:300px"> 
 
-  <img class="w3-image" src="https://lozelise.github.io/Portfolio/CroppedBooks.jpg" alt="books" width="1600" height="800">
+
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-  </div>
-      <div class="w3-main" style="margin-left:300px"> 
-       <h1 class="w3-xxlarge">Research</h1>
-        </div>
+    <img class="w3-image" src="https://lozelise.github.io/Portfolio/CroppedBooks.jpg" alt="books" width="1600" height="800">
+   <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
+    <div class="w3-container">
+    <h1><b>Lauren Fell</b></h1>
+    </div>
 </header>
-
   
 
   
