--- a/research/index.html
+++ b/research/index.html
@@ -66,7 +66,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <img class="w3-image" src="https://lozelise.github.io/Portfolio/CroppedBooks.jpg" alt="books" width="1600" height="800">
    <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
     <div class="w3-container">
-    <h1><b>Lauren Fell</b></h1>
+    <h1><b>Research & Teaching</b></h1>
     </div>
 </header>
   
