--- a/research/index.html
+++ b/research/index.html
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
     <a href="https://lozelise.github.io/Portfolio/research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
     <a href="https://lozelise.github.io/Portfolio/publications" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-file-o fa-fw w3-margin-right"></i>PUBLICATIONS</a> 
-    <a href="https://lozelise.github.io/Portfolio/teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university fa-fw w3-margin-right"></i>TEACHING</a> 
+    <a href="#teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university fa-fw w3-margin-right"></i>TEACHING</a> 
   </div>
     </div>
     <a href="https://lozelise.github.io/Portfolio/uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
