--- a/research/index.html
+++ b/research/index.html
@@ -72,25 +72,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   
 
   
-  <!-- About Section -->
-  <div class="w3-row w3-padding-64" id="about">
-    <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="https://lozelise.github.io/Portfolio/Papers.jpg" class="w3-round w3-image w3-opacity-min" alt="Papers spread out" width="600" height="750">
-    </div>
 
-    <div class="w3-col m6 w3-padding-large">
-      <h2 class="w3-center">Publications</h2><br>
-      <p>Fell, L., Dehdashti, S., Bruza, P., & Moreira, C. (2019). An Experimental Protocol to Derive and Validate a Quantum Model of Decision-Making. arXiv preprint arXiv:1908.07935 <a href ="https://arxiv.org/abs/1908.07935">Access here</a></p>
-      <p>Moreira, C., Fell, L., Dehdashti, S., Bruza, P., & Wichert, A. (2019). Towards a Quantum-Like Cognitive Architecture for Decision-Making. arXiv preprint arXiv:1905.05176.<a href ="https://arxiv.org/abs/1905.05176">Access here</a></p> 
-      <p>Sitbon, L., Fell, L., Poxon, D., Zhang, J., & Geva, S. (2014, November). Towards universal search design. In Proceedings of the 2014 Australasian Document Computing Symposium (p. 109). ACM. <a href ="https://eprints.qut.edu.au/79704/">Access here</a></p>
-      <p class="w3-large w3-text-grey w3-hide-medium"><a href="https://lozelise.github.io/Portfolio/publications">More</a></p>
-    </div>
-  </div>
   
-  <hr>
-  
-  <!-- Menu Section -->
-  <div class="w3-row w3-padding-64" id="menu">
+  <!-- Projects Section -->
+  <div class="w3-row w3-padding-64" id="projects">
     <div class="w3-col l6 w3-padding-large">
       <h2 class="w3-center">Current Projects</h2><br>
       <h4>Social Predictions of Faces</h4>
@@ -116,7 +101,26 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
 
   <hr>
-   <div class="w3-row w3-padding-64" id="about">
+  
+    <!-- Publications Section -->
+  <div class="w3-row w3-padding-64" id="publications">
+    <div class="w3-col m6 w3-padding-large w3-hide-small">
+     <img src="https://lozelise.github.io/Portfolio/Papers.jpg" class="w3-round w3-image w3-opacity-min" alt="Papers spread out" width="600" height="750">
+    </div>
+
+    <div class="w3-col m6 w3-padding-large">
+      <h2 class="w3-center">Publications</h2><br>
+      <p>Fell, L., Dehdashti, S., Bruza, P., & Moreira, C. (2019). An Experimental Protocol to Derive and Validate a Quantum Model of Decision-Making. arXiv preprint arXiv:1908.07935 <a href ="https://arxiv.org/abs/1908.07935">Access here</a></p>
+      <p>Moreira, C., Fell, L., Dehdashti, S., Bruza, P., & Wichert, A. (2019). Towards a Quantum-Like Cognitive Architecture for Decision-Making. arXiv preprint arXiv:1905.05176.<a href ="https://arxiv.org/abs/1905.05176">Access here</a></p> 
+      <p>Sitbon, L., Fell, L., Poxon, D., Zhang, J., & Geva, S. (2014, November). Towards universal search design. In Proceedings of the 2014 Australasian Document Computing Symposium (p. 109). ACM. <a href ="https://eprints.qut.edu.au/79704/">Access here</a></p>
+      <p class="w3-large w3-text-grey w3-hide-medium"><a href="https://lozelise.github.io/Portfolio/publications">More</a></p>
+    </div>
+  </div>
+  
+  <hr>
+  
+    <!-- Teaching Section -->
+   <div class="w3-row w3-padding-64" id="teachingim">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
      <img src="https://lozelise.github.io/Portfolio/classroom.png" class="w3-round w3-image w3-opacity-min" alt="Papers spread out" width="600" height="750">
     </div>
