--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     </a>
-    <a href="https://lozelise.github.io/Portfolio/psytassist">
+    <a href="www.psytassist.com">
     <div class="w3-third w3-container">
       <img src="PsytAssist.png" alt="PsytAssistWebpage" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
