--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
     </div>
     <a href="https://lozelise.github.io/Portfolio/uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
-    <a href="www.psytassist.com" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-laptop fa-fw w3-margin-right"></i>PSYTASSIST</a> 
+    <a href="https://psytassist.com" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-laptop fa-fw w3-margin-right"></i>PSYTASSIST</a> 
   <div class="w3-dropdown-hover">
     <button class="w3-button"><i class="fa fa-plus fa-fw w3-margin-right"></i>OTHER PROJECTS 
       <i class="fa fa-caret-down"></i>
@@ -110,7 +110,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     </a>
-    <a href="www.psytassist.com">
+    <a href="https://psytassist.com">
     <div class="w3-third w3-container">
       <img src="PsytAssist.png" alt="PsytAssistWebpage" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
