--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>Lauren Fell</title>
-<meta charset="UTF-8">
+<head>
+<title>Lauren Fell - Research, Psychology, UX</title>
+<meta name="description" content="Creating experimental protocols to test cognitive models inspired by quantum physics (Quantum Cognition) in the processing of human and animal faces. Associate Lecturer at Queensland University of Technology, I also have projects in design, engineering, robotics and UX">
+<meta name="og:title" property="og:title" content="Lauren Fell">
+<meta property="og:url" content="laurenfell.com.au" />
+<meta property="og:image" content="https://lozelise.github.io/Portfolio/LaurenCircle.png" />
+  <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -10,7 +15,7 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
-
+  </head>
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
   <div class="w3-container">
