--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Lauren Fell - Research, Psychology, UX</title>
 <meta name="description" content="Creating experimental protocols to test cognitive models inspired by quantum physics (Quantum Cognition) in the processing of human and animal faces. Associate Lecturer at Queensland University of Technology, I also have projects in design, engineering, robotics and UX">
-<meta name="og:title" property="og:title" content="Lauren Fell">
+<meta name="og:title" property="og:title" content="Lauren Fell - Research, Psychology, UX">
 <meta property="og:url" content="laurenfell.com.au" />
 <meta property="og:image" content="https://lozelise.github.io/Portfolio/LaurenCircle.png" />
   <meta charset="UTF-8">
