--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
           <span class="w3-large">Cut the Cliches Podcast</span><br>
           <span>Invited as a guest to speak about the psychology of choice</span>
          </li></a>
-       <a href="https://twitter.com/freelancer/status/910322942113959936"><li class="w3-padding-16">
-          <img src="https://lozelise.github.io/Portfolio/NASAcontest.png" class="w3-left w3-margin-right" style="width:50px">
+       <a href="https://www.nasa.gov/solver-spotlight-lauren-fell"><li class="w3-padding-16">
+          <img src="https://lozelise.github.io/Portfolio/NASAtweet.png" class="w3-left w3-margin-right" style="width:50px">
           <span class="w3-large">Winning a NASA contest</span><br>
-          <span>Chatting about my experience winning my first contest with NASA</span>
+          <span>NASA puts the spotlight on me as a Star Solver of their crowdsourced challenges</span>
            </li></a>
       </ul>
     </div>
