--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
          </li></a>
        <a href="https://www.nasa.gov/solver-spotlight-lauren-fell"><li class="w3-padding-16">
           <img src="https://lozelise.github.io/Portfolio/NASAtweet.png" class="w3-left w3-margin-right" style="width:50px">
-          <span class="w3-large">Winning a NASA contest</span><br>
+          <span class="w3-large">Winning NASA contests</span><br>
           <span>NASA puts the spotlight on me as a Star Solver of their crowdsourced challenges</span>
            </li></a>
       </ul>
