--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     border-radius: 55px 55px 55px 55px;
     overflow: hidden;
 }
+    a { color: #AFEEEE; }
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
   </head>
