--- a/publications/index.html
+++ b/publications/index.html
@@ -281,7 +281,7 @@ function openCity(evt, cityName) {
     <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-        <p>lauren.elise.f@gmail.com</p>
+        <p><a href="mailto:lauren.elise.f@gmail.com">lauren.elise.f@gmail.com</a></p>
       </div>
       <div class="w3-third w3-teal">
         <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
@@ -289,11 +289,11 @@ function openCity(evt, cityName) {
       </div>
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-phone w3-xxlarge w3-text-light-grey"></i></p>
-        <p>(+614)104 53 104</p>
+        <p><a href="tel:+61410453104">(+614) 104 53 104</a></p>
       </div>
     </div>
     <hr class="w3-opacity">
-    <form action="/action_page.php" target="_blank">
+    <form action="https://formspree.io/xdowjreg" method="POST">
       <div class="w3-section">
         <label>Name</label>
         <input class="w3-input w3-border" type="text" name="Name" required>
