--- a/publications/index.html
+++ b/publications/index.html
@@ -71,7 +71,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <div class="w3-container">
   <h2>Lauren Fell</h2>
   <p>Associate Lecturer, <a href="https://scholar.google.com.au/citations?view_op=view_org&hl=en&org=4361879795951977785">Queensland University of Technology</a></p>
-  <p>Verified email at qut.edu.au</p>
   <p></p>
   <p><a href="https://scholar.google.com.au/citations?view_op=search_authors&hl=en&mauthors=label:quantum_cognition">quantum cognition</a>&nbsp&nbsp&nbsp&nbsp<a href="https://scholar.google.com.au/citations?view_op=search_authors&hl=en&mauthors=label:behavioural_science">behavioural science</a>&nbsp&nbsp&nbsp&nbsp<a href="https://scholar.google.com.au/citations?view_op=search_authors&hl=en&mauthors=label:social_perception">social perception</a>&nbsp&nbsp&nbsp&nbsp<a href="https://scholar.google.com.au/citations?view_op=search_authors&hl=en&mauthors=label:psychology">psychology</a>&nbsp&nbsp&nbsp&nbsp<a href="https://scholar.google.com.au/citations?view_op=search_authors&hl=en&mauthors=label:neuroscience">neuroscience</a> </p>
   
@@ -114,8 +113,8 @@ table#t01 td {
   
     <tr>
     <td><p><a href="https://doi.org/10.1145/3428472">Trust and COVID-19: Implications for interpersonal, workplace, institutional, and information-based trust</a></p>
-    <p class="w3-text-grey"><strong>Fell, L.</strong> (in press). Trust and COVID-19: Implications for interpersonal, workplace, institutional, and information-based trust. <i>Digital Government: Research and Practice</i></p></td>
-    <td><!--<a href="googlecitation">#</a>--></td> 
+    <p class="w3-text-grey"><strong>Fell, L.</strong> (2020). Trust and COVID-19: Implications for interpersonal, workplace, institutional, and information-based trust. <i>Digital Government: Research and Practice, 2</i>(1), 1-5.</p></td>
+    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=16793887911441745178">2</a></td> 
     <td>2020</td>
   </tr>
   
@@ -136,28 +135,28 @@ table#t01 td {
       <tr>
     <td><p><a href="https://doi.org/10.1017/S0140525X19001687">Towards a quantum-like cognitive architecture for decision-making</a></p>
     <p class="w3-text-grey">Moreira, C., <strong>Fell, L.</strong>, Dehdashti, S., Bruza, P., & Wichert, A. (2020). Towards a quantum-like cognitive architecture for decision-making. <i>Behavioral and Brain Sciences, 43.</i></p></td>
-    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=6404267661982337995">3</a></td>
+    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=6404267661982337995">6</a></td>
     <td>2020</td>
   </tr>
   
       <tr>
     <td><p><a href="https://link.springer.com/chapter/10.1007/978-3-030-45439-5_48">Quantum-like structure in multidimensional relevance judgements</a></p>
     <p class="w3-text-grey">Uprety, S., Tiwari, P., Dehdashti, S., <strong>Fell, L.</strong>, Song, D., Bruza, P., & Melucci, M. (2020, April). Quantum-like structure in multidimensional relevance judgements. In <i>European Conference on Information Retrieval</i> (pp. 728-742). Springer, Cham. </p></td>
-    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=3794688573289359037">4</a></td>
+    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=3794688573289359037">7</a></td>
     <td>2020</td>
   </tr>
   
       <tr>
     <td><p><a href="https://doi.org/10.1145/3343413.3377981 ">Human Information Interaction and the Cognitive Predicting Theory of Trust</a></p>
     <p class="w3-text-grey"><strong>Fell, L.</strong>, Gibson, A., Bruza, P., & Hoyte, P. (2020, March). Human Information Interaction and the Cognitive Predicting Theory of Trust. In <i>Proceedings of the 2020 Conference on Human Information Interaction and Retrieval </i>(pp. 145-152).</p></td>
-    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=8509853187843065986">2</a></td>
+    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=8509853187843065986">4</a></td>
     <td>2020</td>
   </tr>
   
       <tr>
     <td><p><a href="https://doi.org/10.1145/3343413.3377972 ">Engaging the Abilities of Participants with Intellectual Disability in IIR Research</a></p>
     <p class="w3-text-grey">Sitbon, L., Favre, B., Brereton, M., Koplick, S., & <strong>Fell, L.</strong> (2020, March). Engaging the Abilities of Participants with Intellectual Disability in IIR Research. In <i>Proceedings of the 2020 Conference on Human Information Interaction and Retrieval</i> (pp. 103-112). </p></td>
-    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=15648627224047699597">3</a></td>
+    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=15648627224047699597">4</a></td>
     <td>2020</td>
   </tr>
   
@@ -178,7 +177,7 @@ table#t01 td {
       <tr>
     <td><p><a href="https://eprints.qut.edu.au/133875/">An experimental protocol to derive and validate a quantum model of decision-making</a></p>
     <p class="w3-text-grey"><strong>Fell, L.</strong>, Dehdashti, S., Bruza, P., & Pinto Moreira, C. (2019, July). An experimental protocol to derive and validate a quantum model of decision-making. <i>In Proceedings of the 41st Annual Meeting of the Cognitive Science Society (CogSci 2019): </i>(pp. 1724-1730). Cognitive Science Society. </p></td>
-    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=5552220961044733739">4</a></td>
+    <td><a href="https://scholar.google.com.au/scholar?oi=bibs&hl=en&cites=5552220961044733739">7</a></td>
     <td>2019</td>
   </tr>
   
