--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <img src="LunarSampler.png" alt="DesignProjects" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>DESIGN PROJECTS</b></p>
-        <p>I regularly participate in contests as a freelancer to develop my cross-disciplinary skillset, as I see this as important for enabling perspective and creativity when coming up with new ideas. So far, I have won and placed in four contests for NASA - creation of a storyboard to explain RFID tagging in space (1st), creation of a course for implementing the Interplanetary Overlay Network in space (2nd), design of a collapsible radiation shield for shuttle travel (2nd), and design of a moon regolith collector and sorter (3rd).</p>
+        <p>I regularly participate in contests as a freelancer to develop my cross-disciplinary skillset. So far, I have won and placed in five contests for NASA - design of an autonomous inflatable crane for moving cargo on the moon (1st), creation of a storyboard to explain RFID tagging in space (1st), creation of a course for implementing the Interplanetary Overlay Network in space (2nd), design of a collapsible radiation shield for shuttle travel (2nd), and design of a moon regolith collector and sorter (3rd).</p>
       </div>
     </div>
     </a>
